--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/candado.jpg" alt="Imatge 3" onclick="location.href='ex4/ex4.html'">
+                <img src="imatges/A-FRAME.png" alt="Imatge 3" onclick="location.href='ex4/ex4.html'">
                 <div>
-                    <h3>EX4</h3>
-                    <p>Descripció breu.</p>
+                    <h3>A-FRAME ZELDA</h3>
+                    <p>Proba de A-Frame amb tematica de Zelda.</p>
                 </div>
             </div>
 
