--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/candado.jpg" alt="Imatge 2" onclick="location.href='ex4/ex4.html'">
+                <img src="imatges/candado.jpg" alt="Imatge 2" onclick="location.href='ex4/A-FRAME_EXERCICI_5.html'">
                 <div>
                     <h3>CARES</h3>
                     <p>PICA PER PROVAR LES CARES</p>
