--- a/index.html
+++ b/index.html
@@ -171,29 +171,29 @@
             <div class="box">
                 <img src="imatges/candado.jpg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
                 <div>
-                    <h3>Títol 2</h3>
-                    <p>Descripció breu.</p>
+                    <h3>Imatge</h3>
+                    <p>Imatge amb animació</p>
                 </div>
             </div>
             <div class="box">
                 <img src="imatges/candado.jpg" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
                 <div>
-                    <h3>Títol 3</h3>
-                    <p>Descripció breu.</p>
+                    <h3>Barret ACE</h3>
+                    <p>Filtre del barret d'en Ace de One Piece</p>
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/candado.jpg" alt="Imatge 2" onclick="location.href='ex4/A-FRAME_EXERCICI_5.html'">
-                <div>
-                    <h3>CARES</h3>
-                    <p>PICA PER PROVAR LES CARES</p>
-                </div>
-            </div>
-            <div class="box">
-                <img src="imatges/A-FRAME.png" alt="Imatge 3" onclick="location.href='ex4/ex4.html'">
+                <img src="imatges/A-FRAME.png" alt="Imatge 2" onclick="location.href='ex4/ex4.html'">
                 <div>
                     <h3>A-FRAME ZELDA</h3>
                     <p>Proba de A-Frame amb tematica de Zelda.</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="imatges/candado.jpg" alt="Imatge 3" onclick="location.href='ex4/A-FRAME_EXERCICI_5.html'">
+                <div>
+                    <h3>Títol</h3>
+                    <p>descripció breu</p>
                 </div>
             </div>
 
