--- a/index.html
+++ b/index.html
@@ -169,28 +169,28 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/candado.jpg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
+                <img src="imatges/camara.avif" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
                 <div>
                     <h3>Imatge</h3>
                     <p>Imatge amb animació</p>
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/candado.jpg" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
+                <img src="imatges/ACE.jpeg" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
                 <div>
                     <h3>Barret ACE</h3>
                     <p>Filtre del barret d'en Ace de One Piece</p>
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/A-FRAME.png" alt="Imatge 2" onclick="location.href='ex4/ex4.html'">
+                <img src="imatges/A-FRAME.png" alt="Imatge 2" onclick="location.href='ex4/A-FRAME_EXERCICI_5.html'">
                 <div>
                     <h3>A-FRAME ZELDA</h3>
                     <p>Proba de A-Frame amb tematica de Zelda.</p>
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/candado.jpg" alt="Imatge 3" onclick="location.href='ex4/A-FRAME_EXERCICI_5.html'">
+                <img src="imatges/candado.jpg" alt="Imatge 3" onclick="location.href='A-FRAME_EXERCICI_5.html'">
                 <div>
                     <h3>Títol</h3>
                     <p>descripció breu</p>
