--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/A-FRAME.png" alt="Imatge 2" onclick="location.href='ex4/A-FRAME_EXERCICI_5.html'">
+                <img src="imatges/A-FRAME.png" alt="Imatge 2" onclick="location.href='A-FRAME_EXERCICI_5.html'">
                 <div>
                     <h3>A-FRAME ZELDA</h3>
                     <p>Proba de A-Frame amb tematica de Zelda.</p>
