Update image source and text in index.html

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/candado.jpg" alt="Imatge 3" onclick="location.href='A-FRAME_EXERCICI_5.html'">
+                <img src="imatges/zero.png" alt="Imatge 3" onclick="location.href='ex6/ex6.html'">
                 <div>
-                    <h3>Títol</h3>
-                    <p>descripció breu</p>
+                    <h3>CASA MIEDO</h3>
+                    <p>360 casa abandonada</p>
                 </div>
             </div>
 
